--- a/templates/default/theme1.css
+++ b/templates/default/theme1.css
@@ -2582,7 +2582,7 @@ input.radioBox_colored {
   padding-left: 5px;
 }
 .commentBtn:before {
-  visibility: hidden;
+  display: inline-block !important;
 }
 .commentBtn.glyphicon::before {
   font-family: initial;
@@ -2597,12 +2597,12 @@ input.radioBox_colored {
   padding-right: 5px;
   border-bottom: 2px dotted #0F5270;
   border-radius: 0px 0px 0px 4px;
-  visibility: hidden;
+  display: none !important;
   top: -8px;
   padding-bottom: 2px;
 }
 tr.commentOwner div.commentInfo span.commentEditBtn {
-  visibility: visible !important;
+  display: inline-block !important;
 }
 .et2_vbox.et2_box_widget.rightBoxArea {
   display: block;
@@ -3340,7 +3340,7 @@ form[id^="smallpart-student-index"] .commentBtn {
   text-shadow: 0px 0px 0px #ffffff;
 }
 form[id^="smallpart-student-index"] .commentBtn:before {
-  visibility: visible !important;
+  display: inline-block !important;
 }
 form[id^="smallpart-student-index"] .commentEditBtn {
   float: right;
@@ -3349,7 +3349,7 @@ form[id^="smallpart-student-index"] .commentEditBtn {
   padding-right: 5px;
   border-bottom: 2px dotted #0f5270 !important;
   border-radius: 0px 0px 0px 4px;
-  visibility: hidden;
+  display: none !important;
   top: -8px;
   padding-bottom: 2px;
   background-image: none !important;
