--- a/templates/default/theme2.less
+++ b/templates/default/theme2.less
@@ -206,7 +206,7 @@ form[id^="smallpart-student-index"] {
 		text-decoration: none;
 		text-shadow: 0px 0px 0px #ffffff;
 		&:before {
-			visibility: visible !important;
+			display: inline-block !important;
 		}
 	}
 	.commentEditBtn {
@@ -216,7 +216,7 @@ form[id^="smallpart-student-index"] {
 		padding-right: 5px;
 		border-bottom: 2px dotted @color_border;
 		border-radius: 0px 0px 0px 4px;
-		visibility: hidden;
+		display: none !important;
 		top: -8px;
 		padding-bottom: 2px;
 		background-image: none !important;
